feat: enhance GraphFxDisplayOnlyApp with background plotting and overlay management